unpackaged/main/default/objects/metazoa_snapshot_note__c/fields/metazoa_asset_information__c.field-meta.xml
<CustomField>
	<fullName>metazoa_asset_information__c</fullName>
	<label>Asset Information</label>
	<length>130000</length>
	<type>LongTextArea</type>
</CustomField>