unpackaged/main/default/objects/metazoa_snapshot_note__c/fields/metazoa_asset_name__c.field-meta.xml
<CustomField>
	<fullName>metazoa_asset_name__c</fullName>
	<label>Asset Name</label>
	<length>200</length>
	<type>Text</type>
</CustomField>