unpackaged/main/default/objects/metazoa_snapshot_note__c/fields/metazoa_more_information__c.field-meta.xml
<CustomField>
	<fullName>metazoa_more_information__c</fullName>
	<label>More Information</label>
	<length>30000</length>
	<type>LongTextArea</type>
</CustomField>