unpackaged/main/default/objects/metazoa_snapshot_note__c/fields/metazoa_object_type__c.field-meta.xml
<CustomField>
	<fullName>metazoa_object_type__c</fullName>
	<label>Object Type</label>
	<length>200</length>
	<type>Text</type>
</CustomField>